--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Blogix | Рекламная биржа</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
+    <meta name="keywords" content="реклама, рекламная биржа, Blogix, Telegram, Instagram, YouTube, реклама в соцсетях" />
+    <meta name="author" content="Blogix Team" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Blogix | Рекламная биржа" />
+    <meta property="og:description" content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+    <meta property="og:site_name" content="Blogix" />
+    <meta property="og:locale" content="ru_RU" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Blogix | Рекламная биржа" />
+    <meta name="twitter:description" content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
+    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
+    <meta name="twitter:site" content="@your_twitter_handle" />
+
+    <!-- Mobile Optimization -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Blogix" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://yourdomain.com" />
   </head>
   <body>
     <div id="root"></div>
