--- a/index.html
+++ b/index.html
@@ -1,46 +1,76 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Blogix | Рекламная биржа</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Blogix | Рекламная биржа</title>
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
-    <meta name="keywords" content="реклама, рекламная биржа, Blogix, Telegram, Instagram, YouTube, реклама в соцсетях" />
-    <meta name="author" content="Blogix Team" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Blogix | Рекламная биржа" />
-    <meta property="og:description" content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
-    <meta property="og:url" content="https://yourdomain.com" />
-    <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
-    <meta property="og:site_name" content="Blogix" />
-    <meta property="og:locale" content="ru_RU" />
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
+  <meta name="keywords" content="реклама, рекламная биржа, Blogix, Telegram, Instagram, YouTube, реклама в соцсетях" />
+  <meta name="author" content="Blogix Team" />
 
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Blogix | Рекламная биржа" />
-    <meta name="twitter:description" content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
-    <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
-    <meta name="twitter:site" content="@your_twitter_handle" />
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Blogix | Рекламная биржа" />
+  <meta property="og:description"
+    content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+  <meta property="og:site_name" content="Blogix" />
+  <meta property="og:locale" content="ru_RU" />
 
-    <!-- Mobile Optimization -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Blogix" />
-    <meta name="theme-color" content="#ffffff" />
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Blogix | Рекламная биржа" />
+  <meta name="twitter:description"
+    content="Blogix - рекламная биржа для размещения рекламы на Telegram, Instagram, и YouTube. Эффективные инструменты для покупки и продажи рекламных размещений." />
+  <meta name="twitter:image" content="https://yourdomain.com/twitter-image.jpg" />
+  <meta name="twitter:site" content="@your_twitter_handle" />
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourdomain.com" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Mobile Optimization -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Blogix" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://yourdomain.com" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script>
+    function ensureDocumentIsScrollable() {
+      const isScrollable =
+        document.documentElement.scrollHeight > window.innerHeight;
+      if (!isScrollable) {
+        document.documentElement.style.setProperty(
+          "height",
+          "calc(100vh + 1000px)",
+          "important"
+        );
+      }
+    }
+    function preventCollapse() {
+      if (window.scrollY === 0) {
+        window.scrollTo(0, 1);
+      }
+    }
+
+    const scrollableElement = document.querySelector(".scrollable-element");
+    scrollableElement.addEventListener("touchstart", preventCollapse);
+
+    window.addEventListener("load", ensureDocumentIsScrollable);
+  </script>
+</body>
+
 </html>
