--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Blogix | Рекламная биржа | CICD TEST</title>
+  <title>Blogix | Первая рекламная биржа в Узбекистане</title>
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
